--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -20,7 +20,8 @@
   .place__title {
     font-size: 42px;
     line-height: 46px;
-    margin: 0 24px;
+    margin: 0px 24px;
+    padding: 0px;
     max-width: 340px;
   }
 }
