--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -9,7 +9,7 @@
 .place {
   display: grid;
   max-width: 100%;
-  margin: 80px 0px 0px 0px;
+  margin: 80px auto 0px auto;
   padding: 0px;
   grid-template-columns: 1fr auto;
   grid-template-rows: repeat(2, auto);
@@ -25,5 +25,6 @@
     display: flex;
     flex-wrap: wrap;
     margin-top: 64px;
+    width: 100%;
   }
 }
