--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -9,7 +9,7 @@
 .places {
   max-width: 984px;
   position: relative;
-  margin: 92px auto;
+  margin: 92px 0px;
   padding: 0;
 }
 
